Pod_configurations/joyful-apps/joy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joy-of-kubernetes-deployment
  namespace: joyful-apps
  labels:
    app: joy-of-kubernetes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: joy-of-kubernetes
  template:
    metadata:
      labels:
        app: joy-of-kubernetes
    spec:
      # This initContainer will clone your GitHub repo content
      containers:
      - name: joy-of-kubernetes-site
        image: nginx:alpine 
        ports:
        - containerPort: 80 
        volumeMounts:
        - name: static-site-content 
          mountPath: /usr/share/nginx/html 
          readOnly: true 

      volumes:
      - name: static-site-content
        emptyDir: {}
