Pod_configurations/joyful-apps/joy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joy-of-kubernetes-service
  namespace: joyful-apps
  labels:
    app: joy-of-kubernetes
spec:
  type: ClusterIP
  selector:
    app: joy-of-kubernetes 
  ports:
  - protocol: TCP
    port: 80      
    targetPort: 80
