Pod_configurations/joyful-apps/joy-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: joy-of-kubernetes-ingressroute
  namespace: joyful-apps
spec:
  entryPoints:
    - websecure 
  routes:
    - match: Host(`joy.erkinjuntti.eu`)
      kind: Rule
      services:
        - name: joy-of-kubernetes-service
          port: 80                        
  tls:
    certResolver: myresolver 
    domains:
      - main: "joy.erkinjuntti.eu"
